--- a/GuessingGame.Gui.Blazor.Client/wwwroot/index.html
+++ b/GuessingGame.Gui.Blazor.Client/wwwroot/index.html
@@ -7,10 +7,15 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <app>Loading...</app>
-
     <script type="blazor-boot"></script>
+    <script>
+        Blazor.registerFunction('DisableShowLogsButton', function () {
+            $("#ShowLogsButton").prop("disabled", true);
+        });
+    </script>
 </body>
 </html>
